# cpp_sandbox

linker_demo/: Makefile  custom_exec.cpp  custom_exec.h  custom_ops.cpp  custom_ops.h  inspect.sh  main.cpp  run.sh
simpe_adder/: build.sh  main.cpp  utils.h  worker.h
templates_basics/: factorial.cpp  variadic.cpp
vscode_plus_docker/app/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
vscode_plus_docker/container/: Dockerfile  Makefile  install.sh
